// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendAction should change theme backgroundColor to 0.3 opacity 1`] = `
<View
  style={
    {
      "justifyContent": "flex-end",
      "paddingRight": 8,
    }
  }
  testID="post_draft.send_action.send.button.disabled"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "backgroundColor": "#1c58d9",
          "borderRadius": 4,
          "height": 32,
          "justifyContent": "center",
          "width": 80,
        },
        {
          "backgroundColor": "rgba(28,88,217,0.3)",
        },
      ]
    }
  >
    <CompassIcon
      color="rgba(255,255,255,0.5)"
      name="send"
      size={24}
    />
  </View>
</View>
`;

exports[`SendAction should match snapshot 1`] = `
<TouchableWithFeedbackIOS
  onPress={[MockFunction]}
  style={
    {
      "justifyContent": "flex-end",
      "paddingRight": 8,
    }
  }
  testID="post_draft.send_action.send.button"
  type="opacity"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1c58d9",
        "borderRadius": 4,
        "height": 32,
        "justifyContent": "center",
        "width": 80,
      }
    }
  >
    <CompassIcon
      color="#ffffff"
      name="send"
      size={24}
    />
  </View>
</TouchableWithFeedbackIOS>
`;

exports[`SendAction should render theme backgroundColor 1`] = `
<TouchableWithFeedbackIOS
  onPress={[MockFunction]}
  style={
    {
      "justifyContent": "flex-end",
      "paddingRight": 8,
    }
  }
  testID="post_draft.send_action.send.button"
  type="opacity"
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#1c58d9",
        "borderRadius": 4,
        "height": 32,
        "justifyContent": "center",
        "width": 80,
      }
    }
  >
    <CompassIcon
      color="#ffffff"
      name="send"
      size={24}
    />
  </View>
</TouchableWithFeedbackIOS>
`;
